--- a/app/views/proposals/_proposal.html.erb
+++ b/app/views/proposals/_proposal.html.erb
@@ -1,1 +1,4 @@
-<div><%= proposal.title %></div>
+<div class="proposal">
+  <h3><%= proposal.title %></h3>
+  <p class="info">Submitted by <%= proposal.user_name %></p>
+</div>
