Add front page styling.

--- a/app/views/proposals/_proposal.html.erb
+++ b/app/views/proposals/_proposal.html.erb
@@ -6,6 +6,10 @@
         <p><%= proposal.body %></p>
         <footer><%= proposal.user_name %></footer>
       </blockquote>
+      <p>
+        <a class="wide-link text-success"><i class="glyphicon glyphicon-thumbs-up"></i> Write Agreement</a>
+        <a class="wide-link text-danger"><i class="glyphicon glyphicon-thumbs-down"></i> Write Disagreement</a>
+      </p>
     </div>
     <div class="col-md-3">
       d3 Stuff
