--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -19,8 +19,16 @@
   border: 1px solid lightgrey;
   font-weight: 200;
   margin: 10px 0px;
-  padding: 10px;
+  padding: 10px 20px;
   h3 {
     margin-top: 0px;
   }
+  blockquote {
+    margin-bottom: 10px;
+  }
+}
+
+.wide-link {
+  display: inline-block;
+  width: 150px;
 }
