Begin work on d3.

--- a/app/views/proposals/_proposal.html.erb
+++ b/app/views/proposals/_proposal.html.erb
@@ -9,10 +9,11 @@
       <p>
         <a class="wide-link text-success"><i class="glyphicon glyphicon-thumbs-up"></i> Write Agreement</a>
         <a class="wide-link text-danger"><i class="glyphicon glyphicon-thumbs-down"></i> Write Disagreement</a>
+        <a class="wide-link"><i class="glyphicon glyphicon-eye-open"></i> View Details</a>
       </p>
     </div>
     <div class="col-md-3">
-      d3 Stuff
+      <svg class="half-donut"></svg>
     </div>
   </div>
 </div>
