--- a/app/views/proposals/show.html.erb
+++ b/app/views/proposals/show.html.erb
@@ -1,2 +1,13 @@
-<h1>Proposals#show</h1>
-<p>Find me in app/views/proposals/show.html.erb</p>
+<h1>Proposal Arguments</h1>
+
+<%= render @proposal %>
+
+<script>
+  var allPercentages = [<%= @proposal.percentage_agreement.round %>];
+</script>
+
+<%= render partial: "proposal_tree" %>
+
+<% @proposal.positions.direct.each do |p| %>
+  <%= render p %>
+<% end %>
