--- a/app/views/proposals/_proposal.html.erb
+++ b/app/views/proposals/_proposal.html.erb
@@ -1,4 +1,4 @@
-<div class="detail-box">
+<div class="detail-box proposal" onclick="location.href='<%= proposal_path(proposal) %>';">
   <div class="row">
     <div class="col-md-9">
       <h3><%= proposal.title %></h3>
