--- a/app/views/positions/show.html.erb
+++ b/app/views/positions/show.html.erb
@@ -1,2 +1,11 @@
-<h1>Positions#show</h1>
-<p>Find me in app/views/positions/show.html.erb</p>
+<h1>Sub-arguments</h1>
+
+<%= render @position %>
+
+<%= render partial: "position_tree" %>
+
+<div class="responses">
+  <% @position.responses.each do |r| %>
+    <%= render r %>
+  <% end %>
+</div>
