Add navigation links.

--- a/app/views/proposals/index.html.erb
+++ b/app/views/proposals/index.html.erb
@@ -1,3 +1,7 @@
+<div class="right-link">
+  <%= link_to "Add New Proposal", new_proposal_path %>
+</div>
+
 <h1>All Proposals</h1>
 
 <%= render @proposals %>
