--- a/app/views/proposals/show.html.erb
+++ b/app/views/proposals/show.html.erb
@@ -1,3 +1,7 @@
+<div class="right-link">
+  <%= link_to "Return to All Proposals", proposals_path %>
+</div>
+
 <h1>Proposal Arguments</h1>
 
 <%= render @proposal %>
