--- a/app/views/proposals/new.html.erb
+++ b/app/views/proposals/new.html.erb
@@ -1,2 +1,24 @@
-<h1>Proposals#new</h1>
-<p>Find me in app/views/proposals/new.html.erb</p>
+<div class="right-link">
+  <%= link_to "Return to All Proposals", proposals_path %>
+</div>
+
+<h1>New Proposal</h1>
+
+<%= form_for @proposal do |f| %>
+  <div class="form-group">
+    <%= f.label :user_id %>
+    <%= f.collection_select :user_id, User.all, :id, :name, {}, class: "form-control" %>
+  </div>
+
+  <div class="form-group">
+    <%= f.label :title %>
+    <%= f.text_field :title, class: "form-control" %>
+  </div>
+
+  <div class="form-group">
+    <%= f.label :body %>
+    <%= f.text_area :body, class: "form-control", rows: 8 %>
+  </div>
+
+  <%= f.submit class: "btn btn-primary" %>
+<% end %>
