--- a/app/views/positions/new.html.erb
+++ b/app/views/positions/new.html.erb
@@ -1,2 +1,28 @@
-<h1>Positions#new</h1>
-<p>Find me in app/views/positions/new.html.erb</p>
+<div class="right-link">
+  <%= link_to "Return to Proposal", @position.proposal %>
+</div>
+
+<h1>New Response</h1>
+
+<%= form_for [@position.proposal, @position] do |f| %>
+  <%= f.hidden_field :proposal_id %>
+  <%= f.hidden_field :parent_id %>
+  <%= f.hidden_field :agree %>
+
+  <div class="form-group">
+    <%= f.label :user_id %>
+    <%= f.collection_select :user_id, User.all, :id, :name, {}, class: "form-control" %>
+  </div>
+
+  <div class="form-group">
+    <%= f.label :title %>
+    <%= f.text_field :title, class: "form-control" %>
+  </div>
+
+  <div class="form-group">
+    <%= f.label :body %>
+    <%= f.text_area :body, class: "form-control", rows: 8 %>
+  </div>
+
+  <%= f.submit class: "btn btn-primary" %>
+<% end %>
