--- a/app/views/positions/new.html.erb
+++ b/app/views/positions/new.html.erb
@@ -4,6 +4,18 @@
 
 <h1>New Response</h1>
 
+<% if @position.errors.any? %>
+  <div id="error_explanation">
+    <h2><%= pluralize(@position.errors.count, "error") %> prohibited this assignment from being saved:</h2>
+
+    <ul>
+    <% @position.errors.full_messages.each do |message| %>
+      <li><%= message %></li>
+    <% end %>
+    </ul>
+  </div>
+<% end %>
+
 <%= form_for [@position.proposal, @position] do |f| %>
   <%= f.hidden_field :proposal_id %>
   <%= f.hidden_field :parent_id %>
