Remove proposals and positions.  Add propositions.

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -43,10 +43,10 @@
     margin-bottom: 10px;
   }
 
-  &.proposal {
+  &.proposition {
   }
 
-  &.proposal-tree, &.position-tree {
+  &.proposition-tree, &.position-tree {
     background-color: lightgrey;
   }
 
