--- a/app/views/propositions/_proposition.html.erb
+++ b/app/views/propositions/_proposition.html.erb
@@ -9,10 +9,10 @@
       </blockquote>
       <p>
         <%= link_to '<i class="glyphicon glyphicon-thumbs-up"></i> Write Agreement'.html_safe,
-            nil, # new_proposition_position_path(proposition, agree: true),
+            nil, #new_claim_path(parent: , positive: true),
             class: "wide-link text-success over-overlay" %>
         <%= link_to '<i class="glyphicon glyphicon-thumbs-down"></i> Write Disagreement'.html_safe,
-            nil, # new_proposition_position_path(proposition, agree: false),
+            nil, #new_claim_path(parent: , positive: false),
             class: "wide-link text-danger over-overlay" %>
         <%= link_to '<i class="glyphicon glyphicon-eye-open"></i> View Arguments'.html_safe,
             proposition,
