--- a/app/views/mockups/propositions_index.html.erb
+++ b/app/views/mockups/propositions_index.html.erb
@@ -1,2 +1,85 @@
-<h1>Mockups#propositions_index</h1>
-<p>Find me in app/views/mockups/propositions_index.html.erb</p>
+<div class="right-link">
+  <a href="/propositions/new">Add New Proposition</a>
+</div>
+
+<h1>All Propositions</h1>
+
+<div class="detail-box proposition">
+  <a class="overlay" href="/propositions/10"></a>
+  <div class="row">
+    <div class="col-md-9">
+      <h3>I think we should generate cross-platform applications</h3>
+      <blockquote>
+        <p>Aut enim autem voluptates adipisci. Et maiores eveniet et. Eaque sed tempore sunt libero. Doloribus vero iste.</p>
+        <footer>Ransom Fay</footer>
+      </blockquote>
+    </div>
+    <div class="col-md-3">
+      <svg class="half-donut"></svg>
+    </div>
+  </div>
+</div>
+<div class="detail-box proposition">
+  <a class="overlay" href="/propositions/9"></a>
+  <div class="row">
+    <div class="col-md-9">
+      <h3>I think we should matrix bricks-and-clicks functionalities</h3>
+      <blockquote>
+        <p>Laborum quia error. Numquam molestiae velit quo quasi. Nulla voluptate maiores dicta ab. Dolor et nam doloremque ut expedita. Et dignissimos quas eum dolorum excepturi.</p>
+        <footer>Joanny Rogahn</footer>
+      </blockquote>
+    </div>
+    <div class="col-md-3">
+      <svg class="half-donut"></svg>
+    </div>
+  </div>
+</div>
+<div class="detail-box proposition">
+  <a class="overlay" href="/propositions/8"></a>
+  <div class="row">
+    <div class="col-md-9">
+      <h3>I think we should architect rich infomediaries</h3>
+      <blockquote>
+        <p>Amet facilis in rerum tenetur dolorum. Et aut assumenda velit. Laborum molestiae aut.</p>
+        <footer>Elissa Schuppe</footer>
+      </blockquote>
+    </div>
+    <div class="col-md-3">
+      <svg class="half-donut"></svg>
+    </div>
+  </div>
+</div>
+<div class="detail-box proposition">
+  <a class="overlay" href="/propositions/7"></a>
+  <div class="row">
+    <div class="col-md-9">
+      <h3>I think we should cultivate bleeding-edge paradigms</h3>
+      <blockquote>
+        <p>Ipsum voluptatem recusandae. Nihil quisquam molestias eos fugit alias culpa. Nisi animi ad debitis aut qui. Ea cupiditate et.</p>
+        <footer>Joanny Rogahn</footer>
+      </blockquote>
+    </div>
+    <div class="col-md-3">
+      <svg class="half-donut"></svg>
+    </div>
+  </div>
+</div>
+<div class="detail-box proposition">
+  <a class="overlay" href="/propositions/6"></a>
+  <div class="row">
+    <div class="col-md-9">
+      <h3>It would be best to synthesize customized e-tailers</h3>
+      <blockquote>
+        <p>Similique dolores sed aperiam dolorem. Explicabo enim et fugiat iste. Dolorem culpa ut veritatis sit nam.</p>
+        <footer>Elissa Schuppe</footer>
+      </blockquote>
+    </div>
+    <div class="col-md-3">
+      <svg class="half-donut"></svg>
+    </div>
+  </div>
+</div>
+
+<script>
+  var allPercentages = [68, 60, 74, 50, 100, 0, 58, 50, 47, 71];
+</script>
