--- a/app/views/mockups/propositions_show.html.erb
+++ b/app/views/mockups/propositions_show.html.erb
@@ -1,2 +1,81 @@
-<h1>Mockups#propositions_show</h1>
-<p>Find me in app/views/mockups/propositions_show.html.erb</p>
+<div class="right-link">
+  <a href="/propositions">Return to All Propositions</a>
+</div>
+
+<h1>Proposition Arguments</h1>
+
+<div class="detail-box proposition">
+  <a class="overlay" href="/propositions/10"></a>
+  <div class="row">
+    <div class="col-md-9">
+      <h3>I think we should generate cross-platform applications</h3>
+      <blockquote>
+        <p>Aut enim autem voluptates adipisci. Et maiores eveniet et. Eaque sed tempore sunt libero. Doloribus vero iste.</p>
+        <footer>Ransom Fay</footer>
+      </blockquote>
+    </div>
+    <div class="col-md-3">
+      <svg class="half-donut"></svg>
+    </div>
+  </div>
+</div>
+
+
+<script>
+  var allPercentages = [68];
+</script>
+
+<div class="detail-box proposition-tree">
+  <!--Tree stuff goes here.-->
+</div>
+
+
+<div class="responses">
+<div class="detail-box proposition">
+  <h3>No. Maximize bricks-and-clicks systems</h3>
+  <p>
+    <a href="http://jones.name/deja_rowe">Supporting Data</a>
+  </p>
+  <blockquote>
+    <p>Pariatur nihil nisi aut illum voluptates labore excepturi. Amet cumque necessitatibus facilis quam culpa. Impedit est sint dolore non. Vitae qui ut molestiae aut ducimus est laudantium.</p>
+    <footer>Ms. Keaton Hauck</footer>
+  </blockquote>
+  <p>
+    <a class="wide-link text-success over-overlay" href="/propositions/10"><i class="glyphicon glyphicon-thumbs-up"></i> Write Agreement</a>
+    <a class="wide-link text-danger over-overlay" href="/propositions/10"><i class="glyphicon glyphicon-thumbs-down"></i> Write Disagreement</a>
+    <a class="wide-link over-overlay" href="/propositions/10"><i class="glyphicon glyphicon-eye-open"></i> View Arguments</a>
+  </p>
+</div>
+
+<div class="detail-box proposition">
+  <h3>No. Recontextualize mission-critical schemas</h3>
+  <p>
+    <a href="http://tromp.org/arno.simonis">Supporting Data</a>
+  </p>
+  <blockquote>
+    <p>Quasi est eaque voluptatem. Voluptatem magni quia et rem aliquam. Soluta qui officia at iste libero quasi. Aut at atque. Ad nisi dolorum et exercitationem.</p>
+    <footer>Julian Wolf PhD</footer>
+  </blockquote>
+  <p>
+    <a class="wide-link text-success over-overlay" href="/propositions/10"><i class="glyphicon glyphicon-thumbs-up"></i> Write Agreement</a>
+    <a class="wide-link text-danger over-overlay" href="/propositions/10"><i class="glyphicon glyphicon-thumbs-down"></i> Write Disagreement</a>
+    <a class="wide-link over-overlay" href="/propositions/10"><i class="glyphicon glyphicon-eye-open"></i> View Arguments</a>
+  </p>
+</div>
+
+<div class="detail-box proposition">
+  <h3>No. Brand distributed markets</h3>
+  <p>
+    <a href="http://pagac.net/albina">Supporting Data</a>
+  </p>
+  <blockquote>
+    <p>Incidunt laborum veniam rem et aspernatur. Odit eos nulla id. Quo et reprehenderit ex eum qui sit. Corrupti inventore est sed odio ad fuga et.</p>
+    <footer>Greg Heidenreich</footer>
+  </blockquote>
+  <p>
+    <a class="wide-link text-success over-overlay" href="/propositions/10"><i class="glyphicon glyphicon-thumbs-up"></i> Write Agreement</a>
+    <a class="wide-link text-danger over-overlay" href="/propositions/10"><i class="glyphicon glyphicon-thumbs-down"></i> Write Disagreement</a>
+    <a class="wide-link over-overlay" href="/propositions/10"><i class="glyphicon glyphicon-eye-open"></i> View Arguments</a>
+  </p>
+</div>
+</div>
