Continue work on mockups.

--- a/app/views/mockups/propositions_graph.html.erb
+++ b/app/views/mockups/propositions_graph.html.erb
@@ -1,2 +1,21 @@
-<h1>Mockups#propositions_graph</h1>
-<p>Find me in app/views/mockups/propositions_graph.html.erb</p>
+<div class="right-link">
+  <a href="/propositions">Return to Proposition</a>
+</div>
+
+<h1>Proposition Map</h1>
+
+<div class="detail-box proposition">
+  <a class="overlay" href="/propositions/10"></a>
+  <div class="row">
+    <div class="col-md-9">
+      <h3>I think we should generate cross-platform applications</h3>
+      <blockquote>
+        <p>Aut enim autem voluptates adipisci. Et maiores eveniet et. Eaque sed tempore sunt libero. Doloribus vero iste.</p>
+        <footer>Ransom Fay</footer>
+      </blockquote>
+    </div>
+    <div class="col-md-3">
+      <svg class="half-donut"></svg>
+    </div>
+  </div>
+</div>
