--- a/app/views/mockups/claims_new.html.erb
+++ b/app/views/mockups/claims_new.html.erb
@@ -1,2 +1,36 @@
-<h1>Mockups#claims_new</h1>
-<p>Find me in app/views/mockups/claims_new.html.erb</p>
+<div class="right-link">
+  <a href="/propositions">Return to Proposition</a>
+</div>
+
+<h1>New Claim</h1>
+
+<form class="new_proposition" id="new_proposition" action="/propositions" accept-charset="UTF-8" method="post"><input name="utf8" type="hidden" value="&#x2713;" /><input type="hidden" name="authenticity_token" value="MZzXjIG5oV3sPgZrqO8t3XEFPba5aECIDq2EzTd/rFu7sNIs0MHKR/b8W6Y0D6KwKa9YwV6lXBU97dHvwN4EGg==" />
+  <div class="form-group">
+    <label for="proposition_user_id">User</label>
+    <select class="form-control" name="proposition[user_id]" id="proposition_user_id"><option value="1">Chris Lundberg</option>
+      <option value="6">Cierra Rippin</option>
+      <option value="7">Elissa Schuppe</option>
+      <option value="9">Emie Hintz PhD</option>
+      <option value="4">Greg Heidenreich</option>
+      <option value="8">Joanny Rogahn</option>
+      <option value="10">Julian Wolf PhD</option>
+      <option value="2">Marlene Crooks III</option>
+      <option value="5">Ms. Ettie Bahringer</option>
+      <option value="3">Ms. Keaton Hauck</option>
+      <option value="11">Ransom Fay</option>
+    </select>
+  </div>
+
+  <div class="form-group">
+    <label for="proposition_title">Title</label>
+    <input class="form-control" type="text" name="proposition[title]" id="proposition_title" />
+  </div>
+
+  <div class="form-group">
+    <label for="proposition_body">Body</label>
+    <textarea class="form-control" rows="8" name="proposition[body]" id="proposition_body">
+    </textarea>
+  </div>
+
+  <input type="submit" name="commit" value="Create Proposition" class="btn btn-primary" />
+</form>
