--- a/app/views/mockups/claims_new.html.erb
+++ b/app/views/mockups/claims_new.html.erb
@@ -7,7 +7,7 @@
 <form class="new_proposition" id="new_proposition" action="/propositions" accept-charset="UTF-8" method="post"><input name="utf8" type="hidden" value="&#x2713;" /><input type="hidden" name="authenticity_token" value="MZzXjIG5oV3sPgZrqO8t3XEFPba5aECIDq2EzTd/rFu7sNIs0MHKR/b8W6Y0D6KwKa9YwV6lXBU97dHvwN4EGg==" />
   <div class="form-group">
     <label for="proposition_user_id">User</label>
-    <select class="form-control" name="proposition[user_id]" id="proposition_user_id"><option value="1">Chris Lundberg</option>
+    <select class="form-control" name="proposition[user_id]" id="proposition_user_id">
       <option value="6">Cierra Rippin</option>
       <option value="7">Elissa Schuppe</option>
       <option value="9">Emie Hintz PhD</option>
